[package]
name = "kmdf_fx2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.72.1"
edition.workspace = true
publish.workspace = true

[package.metadata.wdk]

[lib]
crate-type = ["cdylib"]

[dependencies]
wdk.workspace = true
wdk-alloc.workspace = true
wdk-panic.workspace = true
wdk-sys.workspace = true
paste = "1.0.14"
win_etw_macros = { path = "../../../../rust_win_etw/win_etw_macros", default-features = false, features = [
  "windows_drivers",
] }
win_etw_provider = { path = "../../../../rust_win_etw/win_etw_provider", default-features = false, features = [
  "windows_drivers",
] }
widestring = { version = "*", default-features = false, features = ["alloc"] }
lazy_static = { version = "*", default-features = false, features = [
  "spin_no_std",
] }

[dependencies.windows-sys]
version = "0.59"
features = ["Win32_Devices_Properties"]

[build-dependencies]
wdk-build.workspace = true

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]
